--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -84,6 +84,12 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
   }
 
+  &_25x25 {
+    margin-top: -25px;
+    margin-left: -12.5px;
+    margin-right: -12.5px;
+  }
+
   &_blog {
     margin-top: -100px;
 
@@ -94,6 +100,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
   &_int28 {
     margin-top: -28px;
+  }
+
+  &_int25 {
+    margin-top: -25px;
   }
 
   &_int10 {
@@ -221,6 +231,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       }
     }
 
+    #{$b}_25x25 & {
+      padding: 25px 12.5px 0;
+    }
+
     #{$b}_t55 & {
       padding-top: 55px;
     }
@@ -247,6 +261,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_int28 & {
       padding-top: 28px;
+    }
+
+    #{$b}_int25 & {
+      padding-top: 25px;
     }
 
     #{$b}_int10 & {
