--- a/app/blocks/space/space.pug
+++ b/app/blocks/space/space.pug
@@ -12,6 +12,7 @@ mixin space(data)
             +box(class='_small ' + item.class)
       +e.title!= data.title
       +e.location!= data.location
+    block
 
 
 mixin space-around(data)
@@ -28,6 +29,7 @@ mixin space-around(data)
             +box(class='_small ' + item.class)
       +e.title!= data.title
       +e.location!= data.location
+    block
 
 mixin space-favorites(data)
   +b.A.space&attributes(attributes)
@@ -43,6 +45,7 @@ mixin space-favorites(data)
             +box(class='_small ' + item.class)
       +e.title!= data.title
       +e.location!= data.location
+    block
 
 
 mixin space-reserv(tag, data)
@@ -62,3 +65,4 @@ mixin space-reserv(tag, data)
             +box(class='_small ' + item.class)
       +e.title!= data.title
       +e.location!= data.location
+    block
