--- a/app/pages/new-space/new-space-step6.pug
+++ b/app/pages/new-space/new-space-step6.pug
@@ -19,7 +19,7 @@ block content
           +e.links
             +link-icon('save')(href="#")._no-shadow._icon_gray-dark._icon_pad30._bold.__link All changes saved
       +progress(85.7)
-  +content-origin._wide-lg._reverse._last
+  +content-origin._wide-lg._reverse
     .container
       +e.wrapper
         +content-column-aside.hide-md
@@ -30,6 +30,38 @@ block content
               +page-info-title._mg62 Almost there
               +page-info-description Step 6 <i>of 7</i>
         +content-column-main._no-ptop
+          +section._white
+            +section-content._form._flex
+              +e.column_rborder._stretch._pb25
+                +e.subsection._pr
+                  +section-title('h3')._mid._mg44._lh1 Great! <br> A couple of last <br> things to get listed.
+                  +content-zone
+                    p We are now having all the basic and necessary information about your working Space. People will see your Space in list right after you add at least one rental offer. You can do it right now or skip this step and add rental offers in your  profile afterwards
+                +e.subsection_mg54
+                  +section-title('h4')._small._mg28 Start adding rental offers right now:
+                  +grid.grid_25x25
+                    +col({xl: 6, xs: 12})
+                      +button('a')(href="#")._orange._border._border_bg-white._short._wide._up HOT DESK
+                    +col({xl: 6, xs: 12})
+                      +button('a')(href="#")._bright-red._border._border_bg-white._short._wide._up DEDICATED DESK
+                    +col({xl: 6, xs: 12})
+                      +button('a')(href="#")._blue._border._border_bg-white._short._wide._up MEETING ROOM
+                    +col({xl: 6, xs: 12})
+                      +button('a')(href="#")._green._border._border_bg-white._short._wide._up OFFICE SPACE
+                +e.links
+                  +link-icon('select-arrow', 'a')(href="#")._forward._no-shadow._light-underline.__link Skip adding rental offers and continue
+              +e.column_space
+                +grid.grid_layout.grid_int25
+                  +col({xl: 12, md: 6, sm: 12})
+                    +space({img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London'})(href="#")
+                  +col({xl: 12, md: 6, sm: 12})
+                    +content-zone
+                      p One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
+            +form-panel._links._border
+              +e.links
+                +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__link Back
+                +link-icon('select-arrow', 'a')(href="#")._forward._bold._no-shadow.__link Skip
+              +button-icon('button', 'select-arrow')(type="submit").__button_wide Next
 
 
 block panels
