--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -34,6 +34,8 @@ block content
         +link(href="new-space-step4.html") SpacePool - HOST My rental offers New Space Step 4 (new-space-step4.html)
         +link(href="new-space-step41.html") SpacePool - HOST My rental offers New Space Step 4-1 (new-space-step41.html)
         +link(href="new-space-step5.html") SpacePool - HOST My rental offers New Space Step 5 (new-space-step5.html)
+        +link(href="new-space-step6.html") SpacePool - HOST My rental offers New Space Step 6 (new-space-step6.html)
+        //- +link(href="new-space-step61.html") SpacePool - HOST My rental offers New Space Step 6-1 (new-space-step61.html)
 
       +page-title._small Попапы
       +e.list
