--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -504,6 +504,16 @@
       }
     }
 
+    &_mg80 {
+      &:not(:last-child) {
+        margin-bottom: 80px;
+
+        @include screen('sm') {
+          margin-bottom: 50px;
+        }
+      }
+    }
+
     &_pr {
       @include screen('lg', min) {
         padding-right: 15%;
@@ -769,6 +779,8 @@
       padding-right: 40px;
 
       @include screen('md') {
+        width: 100%;
+        flex: none;
         padding-right: 0;
       }
     }
