--- a/app/pages/new-space/new-space-step61.pug
+++ b/app/pages/new-space/new-space-step61.pug
@@ -37,8 +37,16 @@ block content
                   +section-title('h3')._mid._mg44._lh1 Great! <br> A couple of last <br> things to get listed.
                   +content-zone
                     p We are now having all the basic and necessary information about your working Space. People will see your Space in list right after you add at least one rental offer. You can do it right now or skip this step and add rental offers in your  profile afterwards
-                +e.subsection_mg54
+                +e.subsection_mg80
                   +section-title('h4')._small._mg28 Rental offers:
+                  +offers._light-border
+                    +offers-heading('orange', 'HOT DESK')
+                    +offers-list()
+                      +offer-simple
+                        +e.heading
+                          +e.H5.title Hot Desks + Networking Meetups and workshops
+                          +price(730).__price
+                        +e.text This is a comment that you provide for the Hot desk offer just to keep clear the information about following retnal offer. Somehow this information can help you to fastly surf tihin your offers.
                 +e.subsection_mg54
                   +grid.grid_25x25
                     +col({xl: 6, xs: 12})
@@ -54,7 +62,7 @@ block content
               +e.column_space
                 +grid.grid_layout.grid_int25
                   +col({xl: 12, md: 6, sm: 12})
-                    +space({img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London'})(href="#")
+                    +space({img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London'})(href="#")._show-heart
                   +col({xl: 12, md: 6, sm: 12})
                     +content-zone
                       p One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
