--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1534,6 +1534,12 @@ block content
         +offer('offer', 'offer5').is-disabled
           +e.H5.title Hot Desk on 4-th floor
           +e.text This is a comment that you provide for the Hot desk offer just to keep clear the information about following retnal offer. Somehow this information can help you to fastly surf tihin your offers.
+        +ui-description .offer_simple
+        +offer-simple
+          +e.heading
+            +e.H5.title Hot Desk on 4-th floor
+            +price(730).__price
+          +e.text This is a comment that you provide for the Hot desk offer just to keep clear the information about following retnal offer. Somehow this information can help you to fastly surf tihin your offers.
 
     //- offers
     +ui-section
@@ -1557,6 +1563,20 @@ block content
           +offers-header('blue', 'MEETING ROOMS', 'no offers')
           +offers-describe
           +offers-list
+        +ui-description .offers - упрощеный заголовок
+        +offers._light-border
+          +offers-heading('orange', 'HOT DESK')
+          +offers-list()
+            +offer-simple
+              +e.heading
+                +e.H5.title Hot Desks + Networking Meetups and workshops
+                +price(730).__price
+              +e.text This is a comment that you provide for the Hot desk offer just to keep clear the information about following retnal offer. Somehow this information can help you to fastly surf tihin your offers.
+            +offer-simple
+              +e.heading
+                +e.H5.title Hot Desks + Networking Meetups and workshops
+                +price(730).__price
+              +e.text This is a comment that you provide for the Hot desk offer just to keep clear the information about following retnal offer. Somehow this information can help you to fastly surf tihin your offers.
 
     //- pagination
     +ui-section
