new space step 7

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -78,6 +78,12 @@
     z-index: 3;
     fill: currentColor;
 
+    &_preview {
+      width: 15px;
+      height: 14px;
+      left: 19px;
+    }
+
     &_plus {
       right: auto;
       left: 21px;
@@ -495,5 +501,13 @@
   &_green {
     background-image: none;
     background-color: $color-office-space;
+  }
+
+  &_preview {
+
+    #{$b}__text {
+      padding-left: 35px;
+      padding-right: 20px;
+    }
   }
 }
