--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -331,4 +331,16 @@
       padding-right: 0;
     }
   }
+
+  &_light {
+    color: $color-text-pale;
+  }
+
+  &_max500 {
+    max-width: 500px;
+
+    @include screen('md') {
+      max-width: none;
+    }
+  }
 }
