--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -27,6 +27,10 @@
       padding-left: 30px;
     }
 
+    &_pad35 {
+      padding-left: 35px;
+    }
+
     &_small {
       padding-left: 25px;
     }
@@ -49,6 +53,10 @@
 
     &_gray-dark {
       fill: $color-icon-gray-another;
+    }
+
+    &_light {
+      fill: $color-icon-gray-onemore;
     }
   }
 
@@ -174,6 +182,36 @@
     &_save {
       width: 15px;
       height: 15px;
+    }
+
+    &_location {
+      width: 11px;
+      height: 17px;
+    }
+
+    &_strings {
+      width: 16px;
+      height: 12px;
+    }
+
+    &_boxes {
+      width: 19px;
+      height: 17px;
+    }
+
+    &_photo {
+      width: 17px;
+      height: 13px;
+    }
+
+    &_rules {
+      width: 12px;
+      height: 15px;
+    }
+
+    &_check-form {
+      width: 17px;
+      height: 14px;
     }
 
     #{$b}_no-shadow & {
