--- a/app/blocks/space/space.pug
+++ b/app/blocks/space/space.pug
@@ -56,6 +56,8 @@ mixin space-reserv(tag, data)
       +e.IMG.image(src=data.img)
       if data.heart
         +button-heart.js-heart.is-active.__heart(class=data.heart.class)
+      if data.heart2
+        +button-heart.js-heart.__heart(class=data.heart2.class)
       if data.flag
         +e.flag!= flag
     +e.DIV.describe
