--- a/app/pages/new-space/new-space-step6.pug
+++ b/app/pages/new-space/new-space-step6.pug
@@ -53,7 +53,7 @@ block content
               +e.column_space
                 +grid.grid_layout.grid_int25
                   +col({xl: 12, md: 6, sm: 12})
-                    +space({img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London'})(href="#")._show-heart
+                    +space-reserv('div', {img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London', heart2: { class: ''}})(href="#")._show-heart
                   +col({xl: 12, md: 6, sm: 12})
                     +content-zone
                       p One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
