--- a/app/components/space-info/space-info.scss
+++ b/app/components/space-info/space-info.scss
@@ -81,6 +81,23 @@
     }
   }
 
+  &__text {
+    @include text-big;
+
+    line-height: 1.45;
+    color: $color-text-pale;
+
+    @include screen('sm') {
+      @include text15;
+
+      line-height: 1.34;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 33px;
+    }
+  }
+
   &__media {
     display: block;
     width: 100%;
@@ -95,6 +112,19 @@
 
       @include screen('sm') {
         margin-bottom: 22px;
+      }
+    }
+  }
+
+  &__space {
+    width: 100%;
+    flex: none;
+
+    &:not(:last-child) {
+      margin-bottom: 34px;
+
+      @include screen('md') {
+        margin-bottom: 14px;
       }
     }
   }
@@ -151,6 +181,12 @@
 
     &:not(:last-child) {
       margin-bottom: 23px;
+    }
+
+    &_mg13 {
+      &:not(:last-child) {
+        margin-bottom: 13px;
+      }
     }
   }
 }
