--- a/app/pages/new-space/new-space-step7.pug
+++ b/app/pages/new-space/new-space-step7.pug
@@ -20,6 +20,50 @@ block content
             +link-icon('save')(href="#")._no-shadow._icon_gray-dark._icon_pad30._bold.__link All changes saved
       +progress(100)
   +content-origin._wide-lg._reverse._last
+    .container
+      +section._white._pt
+        +section-content._form2._flex
+          +e.column_info._mr
+            +e.heading
+              +content-zone._light
+                P This is how it looks in the list:
+          +e.column_rborder._stretch._mr.hide-md
+          +e.column_hints.hide-md
+        +section-content._form2._flex._pb75
+          +e.column_info._mr._md-mb80
+            +space-info
+              +grid.grid_layout
+                +col({ xl: 12, md: 6, sm: 12})
+                  +space-reserv('div', {img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London', heart2: { class: ''}})(href="#")._show-heart.__space
+                  +button-icon('a', 'preview')(href="#")._border._border_bg-white._preview._wide.__button View this space page preview
+                +col({ xl: 12, md: 6, sm: 12})
+                  +space-info-text You can also get back to any of this sections in case of changing something:
+                  +space-info-controls2
+          +e.column_rborder._stretch._mr._md-mb80
+            +e.subsection._mg64
+              +section-title('h2')._mid50._mg24 Everything is fine. Now you are ready to publish your space on Space Pool
+              +content-zone._max500
+                p This is a last step of Space adding walktrough. Your space is now added to your Spaces. You can now add and manage rental offers in specified sections
+            +e.subsection._mg64
+              +section-title('h3')._mid._mg12 What to do next?
+              +content-zone
+                p Check all the information about your space If everything is okay publish the space
+          +e.column_hints
+            +grid.grid_layout.grid_t55
+              +col({xl: 12, md: 6, sm: 12})
+                +e.subsection
+                  +section-title('h4')._mg28 Useful tip
+                  +content-zone
+                    p This is just a beggining! Please don’t stop adding new rental offers for your places. If you have a rental offer with extra features you are always welcome to add it to your space.
+              +col({xl: 12, md: 6, sm: 12})
+                +e.subsection
+                  +section-title('h4')._mg28 Example:
+                  +content-zone
+                    p <b>HOT DESK</b> and <b>HOT DESK with access to workshops and lectures</b> are to different rental offers with possibly two differenet prices. So you can always add a rental offer or same rental offer plus extra services.
+        +form-panel._links._border
+          +e.links
+            +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
+          +button-icon('a', 'select-arrow')(href="#").__button_wide Publish this space
 
 
 block panels
