edit space page location

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -510,6 +510,11 @@
   }
 
   &__buttons {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+
     &:not(:first-child) {
       margin-top: 52px;
     }
