--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -5,6 +5,13 @@
   justify-content: flex-start;
   align-items: center;
 
+  &__content {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
   &__form {
     flex: 1;
 
@@ -39,4 +46,6 @@
     white-space: nowrap;
     margin-left: 50px;
   }
+
+  &_search {}
 }
