--- a/app/components/location/location.pug
+++ b/app/components/location/location.pug
@@ -4,7 +4,7 @@ mixin location()
       +map#marker-map
       +e.IMG.marker(src="assets/images/map/marker-icon-red.png" srcset="assets/images/map/marker-icon-red@2x.png 2x")
     +e.info
-      +form(data-validated-form)._flex
+      +form(data-validated-form)._flex._white
         +form-section
           +input(type="hidden" name="latitude" data-latitude="data-latitude")
           +input(type="hidden" name="longitude" data-longitude="data-longitude")
