--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -59,6 +59,18 @@
     }
   }
 
+  &_gpad {
+    padding: 45px 0 43px;
+
+    @include screen('md') {
+      padding: 35px 0;
+    }
+
+    @include screen('sm') {
+      padding: 19px 0;
+    }
+  }
+
   .container {
     display: block;
   }
