--- a/app/components/space-info/space-info.scss
+++ b/app/components/space-info/space-info.scss
@@ -59,6 +59,8 @@
   &__address {
     @include text16;
 
+    display: block;
+    width: 100%;
     color: $color-basic-light;
 
     &:not(:last-child) {
@@ -84,8 +86,10 @@
   &__text {
     @include text-big;
 
+    display: block;
     line-height: 1.45;
     color: $color-text-pale;
+    width: 100%;
 
     @include screen('sm') {
       @include text15;
