--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -131,6 +131,7 @@ $color-text-pale: #abb6c4;
 $color-border-lightest: #ebeef0;
 $color-facility-hover: #6d7580;
 $color-main-photo: #2bdcc9;
+$color-underline-white-dark-bg: #7c7f85;
 
 // ##########
 // Transitions
