--- a/app/blocks/nav-list/nav-list.scss
+++ b/app/blocks/nav-list/nav-list.scss
@@ -58,5 +58,12 @@
         pointer-events: none;
       }
     }
+
+    &_smalllh {
+
+      .link {
+        line-height: (50/25);
+      }
+    }
   }
 }
