--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -1376,6 +1376,21 @@
       }
     }
   }
+
+  &[aria-disabled="true"] {
+
+    #{$k} {
+      &__inner {
+        color: $color-pagination-disabled;
+      }
+
+      &__toggle {
+        svg {
+          fill: $color-pagination-disabled;
+        }
+      }
+    }
+  }
 }
 
 // #####
