--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -78,3 +78,4 @@ mixin filter-search()
               option(value="param4") Parametr 4
         +e.buttons
           +filter-reset.__reset.js-simple-reset(data-target-form="location-filter-big")
+          +link-icon('map')._icon_gray._no-shadow._bold._small.__button.js-toggle-map Hide Map
