--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -132,6 +132,9 @@ $color-border-lightest: #ebeef0;
 $color-facility-hover: #6d7580;
 $color-main-photo: #2bdcc9;
 $color-underline-white-dark-bg: #7c7f85;
+$color-text-gray: #989fa8;
+$color-text-gray2: #cbd1d8;
+$color-text-gray3: #707a86;
 
 // ##########
 // Transitions
