--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -34,6 +34,10 @@
       padding-left: 35px;
     }
 
+    &_pad27 {
+      padding-left: 27px;
+    }
+
     &_small {
       padding-left: 25px;
     }
@@ -229,6 +233,11 @@
     &_preview {
       width: 15px;
       height: 14px;
+    }
+
+    &_map {
+      width: 17px;
+      height: 17px;
     }
 
     #{$b}_no-shadow & {
