--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -17,6 +17,11 @@
       margin-right: -20px;
     }
   }
+
+  &_side {
+    height: calc(100vh - 80px);
+    width: 100%;
+  }
 }
 
 .leaflet-control-layers-toggle {
