--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -47,5 +47,17 @@
     margin-left: 50px;
   }
 
-  &_search {}
+  &_search {
+
+    #{$b} {
+
+      &__wrapper {
+
+        &:not(:last-child),
+        &:first-child {
+          margin-right: 56px;
+        }
+      }
+    }
+  }
 }
