--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2134,6 +2134,17 @@ block content
                 option(value="Roof terrace") Roof terrace
                 option(value="reception") Reception
 
+      //- address-line
+    +ui-section
+      +ui-section-head
+        h2 address line
+        p Блок: block/address-line
+      +ui-section-content
+        +ui-description .address-line
+        +address-line({line: ['London', 'Kengsinton', 'W22EBF']})
+        +ui-description .address-line с иконками
+        +address-line({line: ['London', 'Kengsinton', 'W22EBF'], icons: [{ ico: 'metro', color: '#9b0158'}, {ico: 'metro', color: '#fed201'}]})
+
 block panels
   +main-menu
 
