--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -170,6 +170,48 @@
       }
     }
 
+    &_stretch {
+      display: block;
+      padding-left: 25px;
+      padding-right: 25px;
+      flex: 1;
+
+      @include screen('md') {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      @include screen('md') {
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    }
+
+    &_map {
+      display: block;
+      box-sizing: border-box;
+      padding-left: 25px;
+      padding-right: 25px;
+      width: 41.67%;
+      transition: width $ease-main, padding $ease-main;
+
+      @include screen('md') {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      @include screen('md') {
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+
+      &.is-closed {
+        width: 0;
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+
     &_ptop {
       padding-top: 110px;
     }
