--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -37,45 +37,41 @@ mixin filter()
     +filter-reset.__reset.js-simple-reset.hide-sm(data-target-slot="location-clear" data-target-form="location-filter-big")
 
 mixin filter-search()
-  +b.SECTION.filter_search&attributes(attributes)
-    .container
-      +e.content
-        +e.FORM.form(data-form="location-filter-big")
-          +e.wrapper
-            +select.js-select-dark(name="city")
-              option(value="placeholder" placeholder) City
-              option(value="London" selected) London
-              option(value="Paris") Paris
-              option(value="Moscow") Moscow
-          +e.wrapper
-            +select.js-select-dark(name="area")
-              option(value="placeholder" placeholder) Areas
-              option(value="Central London") Central London
-              option(value="Stratford Area") Stratford Area
-              option(value="Canary Warf") Canary Warf
-              option(value="Ilford") Ilford
-              option(value="Brixton") Brixton
-              option(value="Richmond") Richmond
-          +e.wrapper
-            +select.js-select-dark(name="workplace-type")
-              option(value="placeholder" placeholder) Workplace type
-              option(value="htdsk") Hot Desk
-              option(value="dddsk") Dedicated Desk
-              option(value="room") Meeting Room
-              option(value="space") Office Space
-          +e.wrapper
-            +select.js-select-dark(name="priceGap" disabled)
-              option(value="placeholder" placeholder) Price gap
-              option(value="1") 0 - 500
-              option(value="2") 500 - 1000
-              option(value="3") 1000 - 1500
-          +e.wrapper
-            +select.js-select-dark(name="advancedParam" disabled)
-              option(value="placeholder" placeholder) Advanced parameters
-              option(value="param1") Parametr 1
-              option(value="param2") Parametr 2
-              option(value="param3") Parametr 3
-              option(value="param4") Parametr 4
-        +e.buttons
-          +filter-reset.__reset.js-simple-reset(data-target-form="location-filter-big")
-          +link-icon('map')._icon_gray._no-shadow._bold._small.__button.js-toggle-map Hide Map
+  +b.SECTION.filter&attributes(attributes)
+    +e.content
+      +e.FORM.form(data-form="location-filter-big")
+        +e.wrapper
+          +select.js-select-dark2(name="city" readonly)
+            option(value="placeholder" placeholder) City
+            option(value="London" selected) London
+            option(value="Paris") Paris
+            option(value="Moscow") Moscow
+        +e.wrapper
+          +select.js-select-dark2(name="area")
+            option(value="placeholder" placeholder) Area
+            option(value="Central London") Central London
+            option(value="Stratford Area") Stratford Area
+            option(value="Canary Warf") Canary Warf
+            option(value="Ilford") Ilford
+            option(value="Brixton") Brixton
+            option(value="Richmond") Richmond
+        +e.wrapper
+          +select.js-select-dark2(name="workplace-type")
+            option(value="placeholder" placeholder) Workplace type
+            option(value="htdsk") Hot Desk
+            option(value="dddsk") Dedicated Desk
+            option(value="room") Meeting Room
+            option(value="space") Office Space
+        +e.wrapper
+          +select.js-select-dark2(name="priceGap" disabled)
+            option(value="placeholder" placeholder) Price gap
+            option(value="1") 0 - 500
+            option(value="2") 500 - 1000
+            option(value="3") 1000 - 1500
+        +e.wrapper
+          +select.js-select-dark2(name="advancedParam" disabled)
+            option(value="placeholder" placeholder) Advanced parameters
+            option(value="param1") Parametr 1
+            option(value="param2") Parametr 2
+            option(value="param3") Parametr 3
+            option(value="param4") Parametr 4
