--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -7,4 +7,30 @@ block header
   -var headerClass = '_border'
 
 block content
-  +filter-search
+  -var spaces = getData('search-spaces.json')
+  +search-filter
+  +content-origin._reverse._last
+    .container
+      +e.wrapper
+        +e.column_stretch
+          each item in spaces
+            +space-offer(class=item.status)
+              +space-offer-side.hide-md(data-slot-id=item.id data-slot-res="xl")
+              +space-offer-content
+                +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=item.id data-slot-res="lg")
+                +e.describe
+                  +address-line(item.adressLine)
+                  +button-heart('div')._small._gray.__heart.js-heart
+                  +space-offer-title!= item.title
+                  +e.media-wrapper_sm.hide-from-sm(data-slot-id=item.id data-slot-res="sm")
+                    +space-offer-media(item.status)(data-target-slot=item.id)
+                      +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
+                        each slider in item.slider
+                          +e.IMG.slide.swiper-slide(src=slider)
+                  +space-offer-text!= item.describe
+        +e.column_map(data-map="map")
+          +sidebar._no-bg
+            +map._side#mapTwo
+
+block panels
+  +main-menu
