--- a/app/blocks/pagination/pagination.scss
+++ b/app/blocks/pagination/pagination.scss
@@ -13,6 +13,16 @@
     }
   }
 
+  &_mgt32 {
+    &:not(:first-child) {
+      margin-top: 32px;
+
+      @include screen('sm') {
+        margin-top: 30px;
+      }
+    }
+  }
+
   &_negative-mgt:not(:first-child) {
     margin-top: -28px;
 
