--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1302,6 +1302,14 @@ block content
         +offer-info()._short
           +box._size10._orange
           +e.title hot desk <span class="offer-info__count">x5</span>
+        +ui-description .offer-info._short with price type 2
+        +offer-info('div', '', '730', '_small')._short
+          +box._size10._orange
+          +e.title hot desk
+        +ui-description .offer-info._short with no cost
+        +offer-info('div', '', 'noprice', '')._short
+          +box._size10._orange
+          +e.title hot desk
         div(style="background: black; color: white;")
           +ui-description .offer-info._light
           +offer-info()._light
@@ -1940,6 +1948,8 @@ block content
       +ui-section-content
         +ui-description .price
         +price('324')
+        +ui-description .price_small
+        +price('324')._small
 
     //- factor
     +ui-section
