--- a/app/blocks/price/price.scss
+++ b/app/blocks/price/price.scss
@@ -18,4 +18,16 @@
     line-height: (26/14);
     color: $color-basic-gray;
   }
+
+  &_small {
+    @include text;
+
+    line-height: 1.2;
+
+    small {
+      @include text12;
+
+      line-height: 1.2;
+    }
+  }
 }
