--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -13,21 +13,29 @@ block content
     .container
       +e.wrapper
         +e.column_stretch
-          each item in spaces
-            +space-offer(class=item.status)
-              +space-offer-side.hide-md(data-slot-id=item.id data-slot-res="xl")
-              +space-offer-content
-                +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=item.id data-slot-res="lg")
-                +e.describe
-                  +address-line(item.adressLine)
-                  +button-heart('div')._small._gray.__heart.js-heart
-                  +space-offer-title!= item.title
-                  +e.media-wrapper_sm.hide-from-sm(data-slot-id=item.id data-slot-res="sm")
-                    +space-offer-media(item.status)(data-target-slot=item.id)
-                      +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
-                        each slider in item.slider
-                          +e.IMG.slide.swiper-slide(src=slider)
-                  +space-offer-text!= item.describe
+          +results
+            each item in spaces
+              +space-short('a')(href="#")
+                +space-short-side.hide-md(data-slot-id=item.id data-slot-res="xl")
+                +space-short-content
+                  +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=item.id data-slot-res="lg")
+                  +e.describe
+                    +address-line(item.adressLine).__adress
+                    +button-heart('div')._small._gray.__heart.js-heart
+                    +space-short-title!= item.title
+                    +e.media-wrapper_sm.hide-from-sm(data-slot-id=item.id data-slot-res="sm")
+                      +space-short-media()(data-target-slot=item.id)
+                        +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
+                          each slider in item.slider
+                            +e.IMG.slide.swiper-slide(src=slider)
+                    +space-short-text!= item.describe
+                  +space-short-offers
+                    each offer in item.offers
+                      +e.offer
+                        +offer-info('div', '', offer.price, '_small')(class="_short " + offer.status)
+                          +box(class="_size10 " + offer.box)
+                          +e.title_small._light-gray!= offer.name
+          +pagination._mgt32
         +e.column_map(data-map="map")
           +sidebar._no-bg
             +map._side#mapTwo
