--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -135,6 +135,7 @@ $color-underline-white-dark-bg: #7c7f85;
 $color-text-gray: #989fa8;
 $color-text-gray2: #cbd1d8;
 $color-text-gray3: #707a86;
+$color-title-dark: #2d333b;
 
 // ##########
 // Transitions
